Agregando autenticación y fix en las associaciones
