# src/db/dto/user.ts
@@ -1,0 +1,9 @@
+import { Optional } from 'sequelize';
+
+export interface User {
+  id: number;
+  user: string;
+  password: string;
+}
+
+export type UserInput = Optional<User, 'id'>
